--- a/rest-api/src/index.css
+++ b/rest-api/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap');
+
+@layer base {
+    body {
+        font-family: 'Nunito Sans', sans-serif;    }
+}
