--- a/rest-api/src/index.css
+++ b/rest-api/src/index.css
@@ -2,9 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap");
 
 @layer base {
-    body {
-        font-family: 'Nunito Sans', sans-serif;    }
+  body {
+    font-family: "Nunito Sans", sans-serif;
+  }
 }
